# A.I.N.-Reborn

./: .gitignore  LICENSE  README.md  pipeline.py  pyproject.toml  requirements.txt
.ai-pipeline/: config.json  state.json
.ai-pipeline/prompts/: architecture_prompt.md  fallback_implementation_prompt.md  fallback_task_creation_prompt.md  implementation_prompt.md  planning_generation_prompt.md  planning_questions_prompt.md  prd_extraction_prompt.md  task_creation_prompt.md
.chief/prds/main/: prd.json  progress.md
.warp/workflows/: pipeline-approve.yaml  pipeline-implement.yaml  pipeline-plan.yaml  pipeline-reset.yaml  pipeline-run.yaml  pipeline-scan.yaml  pipeline-status.yaml
ain/: __init__.py  __main__.py  cli.py  pipeline.py  tui.py
ain/data/: CLAUDE.md  config.json
ain/data/prompts/: architecture_prompt.md  fallback_implementation_prompt.md  planning_generation_prompt.md  planning_questions_prompt.md  task_creation_prompt.md  verification_prompt.md
ain/models/: __init__.py  state.py
ain/pipeline/: __init__.py  _failure.py  _prompts.py  _scanning.py  _text.py
ain/runtime/: __init__.py  emitter.py  events.py
ain/services/: __init__.py  agent_gateway.py  config_service.py  log_service.py  state_service.py
ain/ui/: __init__.py
ain/ui/renderers/: __init__.py  rich_live.py
ain/ui/views/: __init__.py  approval_view.py  mode_select_view.py  multiline_input_view.py
docs/: TASKS.md  TASK_GRAPH.json
tests/: test_agent_fallback.py  test_approval_view.py  test_cli_regression.py  test_docs_file.py  test_docs_test_md.py  test_e2e.py  test_integration.py  test_multiline_flow.py  test_multiline_input_view.py  test_notifications.py  test_pipeline.py  test_pipeline_modes.py  test_pipeline_pause.py  test_pipeline_resume.py  test_pipeline_state.py  test_readme_headings.py  test_recovery_flow.py  test_rich_live_elapsed.py  test_rich_live_mode_select.py  test_rich_live_multiline_submit.py  test_rich_live_quit.py  test_rich_live_task_approval.py  test_terminal_orchestration.py  test_waiting_approval_tui.py
