[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ain-pipeline"
version = "0.1.0"
description = "A.I.N. Pipeline — multi-agent AI development orchestrator"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "PS229397" }
]
keywords = ["ai", "pipeline", "orchestrator", "llm", "codegen", "gemini", "codex", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "colorama>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/PS229397/A.I.N.-Reborn"
Repository = "https://github.com/PS229397/A.I.N.-Reborn"
Issues = "https://github.com/PS229397/A.I.N.-Reborn/issues"

[project.scripts]
ain = "ain.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ain*"]

[tool.setuptools.package-data]
ain = [
    "data/config.json",
    "data/prompts/*.md",
]
