[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ain-pipeline"
version = "0.1.8"
description = "A.I.N. Pipeline — multi-agent AI development orchestrator"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "PS229397" }
]
keywords = ["ai", "pipeline", "orchestrator", "llm", "codegen", "gemini", "codex", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "colorama>=0.4.6",
]

[project.urls]
Homepage = "https://github.com/PS229397/A.I.N.-Reborn"
Repository = "https://github.com/PS229397/A.I.N.-Reborn"
Issues = "https://github.com/PS229397/A.I.N.-Reborn/issues"

[project.scripts]
ain = "ain.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ain*"]

[tool.setuptools.package-data]
ain = [
    "data/config.json",
    "data/prompts/*.md",
]
